--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "bluebird": "^3.4.7",
     "fs-extra-promise": "^0.4.1",
-    "goferfs": "types",
+    "goferfs-types": "^0.5.4",
     "mime": "^1.3.4"
   },
   "devDependencies": {
@@ -32,7 +32,8 @@
     "@types/mime": "^0.0.29",
     "@types/mocha": "^2.2.38",
     "@types/node": "^6.0.52",
-    "goferfs-test-suite": "^0.4.0",
+    "goferfs-interfaces": "^0.5.4",
+    "goferfs-test-suite": "^0.5.0",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
     "ts-node": "^2.0.0",
@@ -40,6 +41,6 @@
     "typescript": "^2.1.5"
   },
   "peerDependencies": {
-    "goferfs": "types"
+    "goferfs": "^0.5.4"
   }
 }
