--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "goferfs-adapter-local",
   "version": "0.1.0",
   "description": "Local Adapter for Gofer",
-  "main": "build/index.js",
+  "main": "./index.js",
   "engines": {
     "node": ">=4.0"
   },
   "scripts": {
-    "build": "rimraf build && npm run lint && tsc",
-    "test": "mocha --require ts-node/register ./src/**/*.test.ts",
-    "lint": "tslint ./src/**/*",
-    "prepublish": "npm run build"
+    "build": "rimraf *.js lib/**/*.js && npm run lint && tsc",
+    "test": "npm run build && mocha --require ts-node/register tests/**/*.ts",
+    "lint": "tslint --exclude=node_modules/**/* **/*.ts",
+    "prepublish": "npm test"
   },
   "repository": {
     "url": "http://github.com/cohesivelabs/goferfs",
@@ -24,23 +24,22 @@
   "dependencies": {
     "bluebird": "^3.4.7",
     "fs-extra-promise": "^0.4.1",
-    "goferfs-types": "^0.6.0",
+    "goferfs-types": "^1.0.0-2",
     "mime": "^1.3.4"
   },
   "devDependencies": {
     "@types/fs-extra-promise": "^0.0.31",
     "@types/mime": "^0.0.29",
     "@types/mocha": "^2.2.38",
-    "@types/node": "^6.0.52",
-    "goferfs-interfaces": "^0.6.0",
-    "goferfs-test-suite": "^0.5.0",
+    "@types/node": "^7.0.4",
+    "goferfs-test-suite": "^1.0.0-3",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
     "ts-node": "^2.0.0",
-    "tslint": "^4.3.1",
+    "tslint": "^4.4.2",
     "typescript": "^2.1.5"
   },
   "peerDependencies": {
-    "goferfs": "^0.6.0"
+    "goferfs": "^1.0.0-1"
   }
 }
