--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goferfs-adapter-local",
-  "version": "0.1.0",
+  "version": "1.0.0-0",
   "description": "Local Adapter for Gofer",
   "main": "./index.js",
   "engines": {
