--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "goferfs-adapter-local",
   "version": "1.0.0-0",
   "description": "Local Adapter for Gofer",
-  "main": "./index.js",
+  "main": "src/index.js",
+  "types": "src/index.ts",
   "engines": {
     "node": ">=4.0"
   },
   "scripts": {
-    "build": "rimraf *.js lib/**/*.js && npm run lint && tsc",
-    "test": "npm run build && mocha --require ts-node/register tests/**/*.ts",
-    "lint": "tslint --exclude=node_modules/**/* **/*.ts",
+    "lint": "tslint src/**/*.ts",
+    "build": "rimraf src/**/*.js && npm run lint && tsc",
+    "test": "npm run build && mocha --require ts-node/register src/**/*.test.ts",
     "prepublish": "npm test"
   },
   "repository": {
@@ -24,7 +25,7 @@
   "dependencies": {
     "bluebird": "^3.4.7",
     "fs-extra-promise": "^0.4.1",
-    "goferfs-types": "^1.0.0-2",
+    "goferfs-types": "^1.0.0-4",
     "mime": "^1.3.4"
   },
   "devDependencies": {
@@ -32,7 +33,7 @@
     "@types/mime": "^0.0.29",
     "@types/mocha": "^2.2.38",
     "@types/node": "^7.0.4",
-    "goferfs-test-suite": "^1.0.0-3",
+    "goferfs-test-suite": "^1.0.0-6",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
     "ts-node": "^2.0.0",
