--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "lint": "tslint src/**/*.ts",
-    "build": "rimraf src/**/*.js && npm run lint && tsc",
+    "clean": "rimraf src/**/*.js",
+    "build": "npm run clean && npm run lint && tsc && babel -d . src/**/*.js",
     "test": "npm run build && mocha --require ts-node/register src/**/*.test.ts",
     "prepublish": "npm test"
   },
@@ -23,9 +24,10 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "babel-runtime": "^6.22.0",
     "bluebird": "^3.4.7",
     "fs-extra-promise": "^0.4.1",
-    "goferfs-types": "^1.0.0-5",
+    "goferfs-types": "^1.0.0-8",
     "mime": "^1.3.4"
   },
   "devDependencies": {
@@ -33,7 +35,10 @@
     "@types/mime": "^0.0.29",
     "@types/mocha": "^2.2.38",
     "@types/node": "^7.0.4",
-    "goferfs-test-suite": "^1.0.0-7",
+    "babel-cli": "^6.22.2",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.1.8",
+    "goferfs-test-suite": "^1.0.0-9",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
     "ts-node": "^2.0.0",
